Navigation: Fix a tiny spacing issue.

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -14,6 +14,7 @@
   }
 }
 .header-donate {
+  margin-top: -0.05rem;
   margin-left: -1rem;
 
   a.btn {
